# wxreversi

./: CMakeLists.txt  Info.plist.in  README.md  help_mac.mm  reversi.rc  reversi.xrc  reversi_engine.cpp  reversi_engine.h  reversi_wx.cpp  wxreversi.6  wxreversi.chm  wxreversi.desktop  wxreversi.metainfo.xml
.github/: FUNDING.yml
wxreversi.help/Contents/: Info.plist
wxreversi.help/Contents/Resources/en.lproj/: index.html  wxReversi.helpindex
wxreversi.help/Contents/Resources/en.lproj/pgs/: commands.html  game-menu.html  keyboard.html  playing.html  rules.html  skill-menu.html
wxreversi.help/Contents/Resources/en.lproj/shrd/: style.css
wxreversichm/: wxreversi.hhp
